--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     android:orientation="vertical"
     tools:context=".NoteFragment">
 
@@ -10,7 +11,8 @@
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="28sp">
+        android:textColor="@color/hot_pink"
+        android:textSize="@dimen/tv_title_size">
 
     </TextView>
 
@@ -18,7 +20,8 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="38sp">
+        android:textColor="@color/light_pink"
+        android:textSize="@dimen/tv_description_size">
 
     </TextView>
 
