--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -9,20 +9,20 @@
         android:id="@+id/header_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
+        android:layout_margin="16dp"
+        android:paddingBottom="20dp"
         android:text="@string/header_title"
-        android:textSize="22sp"
-        />
+        android:textAlignment="center"
+        android:textSize="22sp" />
 
     <LinearLayout
         android:id="@+id/notes_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="16dp"
         android:orientation="vertical"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp">
+        android:paddingTop="28dp">
 
     </LinearLayout>
 
