renamed some fields

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,13 +7,13 @@
     tools:context=".MainActivity">
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/notes_container"
         android:layout_width="0px"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
     <FrameLayout
-        android:id="@+id/fragment2_container"
+        android:id="@+id/note_container"
         android:layout_width="0px"
         android:layout_height="match_parent"
         android:layout_weight="1.5" />
