--- a/app/src/main/res/layout/fragment_note_child.xml
+++ b/app/src/main/res/layout/fragment_note_child.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".NoteChildFragment">
 
-    <FrameLayout
-        android:id="@+id/notes_container"
+    <TextView
+        android:id="@+id/tv_note_child"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:linksClickable="true"
+        android:text="@string/tv_note_child"
+        android:textSize="28sp" />
 
 </FrameLayout>
