--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_calendar"
-        android:icon="@android:drawable/ic_menu_compass"
+        android:icon="@android:drawable/ic_lock_idle_alarm"
         android:title="@string/calendar" />
 
     <item
         android:id="@+id/action_exit"
-        android:icon="@android:drawable/btn_minus"
+        android:icon="@android:drawable/btn_dropdown"
         android:title="@string/exit" />
 </menu>
