added some changes to show image and checkbox within note

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -8,23 +8,45 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/note_title"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:textAlignment="center"
-            android:textColor="@color/hot_pink"
-            android:textSize="@dimen/tv_title_size" />
+            android:layout_height="200dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:scaleType="fitXY" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/like"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
+
+            <TextView
+                android:id="@+id/note_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:textColor="@color/hot_pink"
+                android:textSize="@dimen/tv_title_size" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/note_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_weight="1"
             android:textAlignment="center"
             android:textColor="@color/light_pink"
             android:textSize="@dimen/tv_description_size" />
