--- a/app/src/main/res/menu/notes_menu.xml
+++ b/app/src/main/res/menu/notes_menu.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_calendar"
-        android:title="@string/calendar"
-        app:showAsAction="never" />
+        android:id="@+id/action_add"
+        android:title="@string/add"
+        app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/action_exit"
-        android:title="@string/exit"
+        android:id="@+id/action_clear"
+        android:title="@string/clear"
         app:showAsAction="never" />
 
 </menu>
